--- a/manifest.json
+++ b/manifest.json
@@ -770,6 +770,18 @@
     },
     {
       "type": "ManagedReference",
+      "source_relative_path": "api/Global.CoinsController.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/Global.CoinsController.html",
+          "hash": "uhe0Nf5Tk76KneExDStXgqEE0xyx64CfPj6EoFwR7mM="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
       "source_relative_path": "api/Global.DeathZone.yml",
       "output": {
         ".html": {
@@ -858,7 +870,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Global.IInventory.html",
-          "hash": "/IyvUccxY5xxin6/Sc1161lAvXjQEXvP2arwRhuvlKo="
+          "hash": "RBzxw74TxatSkXpTYSuA6h4BGaXfHp+l4sknDAnNUls="
         }
       },
       "is_incremental": false,
@@ -870,7 +882,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Global.Inventory.html",
-          "hash": "O13QT6ukvnr4Q7M3AWmERc2wTNNaehODgw49PRJ0q4c="
+          "hash": "KAMFe+jObTTiceLdcaGcAleKetp9URAJLU51jeLFU4o="
         }
       },
       "is_incremental": false,
@@ -882,7 +894,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Global.InventoryController.html",
-          "hash": "fkqvCACsdm7h0kaZ7v22UdF1gHu5mEZ7bd6uM+kpaeg="
+          "hash": "pBzdNs9YB1zRlHhOLYIMe6Cq52YMvgFiz3vUHWhoqCY="
         }
       },
       "is_incremental": false,
@@ -1014,7 +1026,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Global.PauseMenu.html",
-          "hash": "W8tzbqVIn+k5ttmeK4HAtenzz4sZ6UNJjTe93VJ+WTU="
+          "hash": "4BppTr7wmvGCkszCvDebVgtAATd85SGwV+2kkcZk+z8="
         }
       },
       "is_incremental": false,
@@ -1026,7 +1038,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Global.PlayerController.html",
-          "hash": "ARlGrfH6+CIULE9kM2MaiBkUK+tRb+y9V6CZ+xHaavE="
+          "hash": "Sc2SGzgi/16RWumsvXc/1ve3IxV9gDDIh2fmQ5srCCk="
         }
       },
       "is_incremental": false,
@@ -1106,11 +1118,23 @@
     },
     {
       "type": "ManagedReference",
+      "source_relative_path": "api/Global.StatisticsManager.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/Global.StatisticsManager.html",
+          "hash": "87/oN0X7NzyFs7atCgUiwrXnQ22114u9exkHEwFLApM="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
       "source_relative_path": "api/Global.TestInventory.yml",
       "output": {
         ".html": {
           "relative_path": "api/Global.TestInventory.html",
-          "hash": "z0C7Sobtp63KPEDbPb/MDeplpIHrtBD4AsDPYFfcq2E="
+          "hash": "Eo5xbqYVDsVZ5vjWUdgwaelAB2oaU2f0kRijbrGA4rs="
         }
       },
       "is_incremental": false,
@@ -1182,7 +1206,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Global.html",
-          "hash": "1OsQGH+sWCl+flvaid77VXM96qP5tcXDS0IfKnAohiw="
+          "hash": "TQ4mNuFbsRynFOvGtPgS3Va7/6L4YixhNlA2LXaxsBE="
         }
       },
       "is_incremental": false,
@@ -1346,6 +1370,30 @@
     },
     {
       "type": "ManagedReference",
+      "source_relative_path": "api/UI.PlayerStatsMenu.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/UI.PlayerStatsMenu.html",
+          "hash": "3EGznIgxduf1DLU20H4/R32H9jlIJXO1+XwR6x/eHyw="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/UI.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/UI.html",
+          "hash": "Guygd2LSDxaSt1coOqhWgkmXhqCmAKypsw8FOPjmKlA="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
       "source_relative_path": "api/Utilities.FadeObjectColor.yml",
       "output": {
         ".html": {
@@ -1358,11 +1406,23 @@
     },
     {
       "type": "ManagedReference",
+      "source_relative_path": "api/Utilities.Singleton-1.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/Utilities.Singleton-1.html",
+          "hash": "SGebKEP2d6ULrvpLEAA1492sHpy8kkxkhBS3SJRfJpo="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
       "source_relative_path": "api/Utilities.yml",
       "output": {
         ".html": {
           "relative_path": "api/Utilities.html",
-          "hash": "VwNYsKwiWeBulmVpeUDtTZ6CRAa3ywSfHpGMepUygZQ="
+          "hash": "UxRt+apbgY4WQuQgs9vNeJ1CcmTXRiQjTkgxCLEy5d4="
         }
       },
       "is_incremental": false,
@@ -1386,7 +1446,7 @@
       "output": {
         ".html": {
           "relative_path": "api/toc.html",
-          "hash": "+RDcdQQ4jJktce0zvt5qdJzjq9Do6VVe+ZM3paaEK48="
+          "hash": "UQoxFOljlkEnNd4jWEHhseBbclyY7TiNlFAfdHgLXmU="
         }
       },
       "is_incremental": false,
@@ -1563,7 +1623,7 @@
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build",
-          "total_file_count": 113,
+          "total_file_count": 118,
           "skipped_file_count": 0
         },
         "ResourceDocumentProcessor": {
